IGNITE-16707 KeyValueView test (wip).